--- a/index.html
+++ b/index.html
@@ -28,50 +28,61 @@
         <div class="circle"></div>
     </div>
 
-    <!-- Header -->
+    <!-- <#Header -->
     <header class="header" data-header>
         <div class="container">
+
             <a href="#" class="logo">
-                <img src="./assets/images/logo.svg" width="170" height="40" alt="Portfolio Logo">
+                <img src="./assets/images/logo.svg" width="170" height="40" alt="Pfolio home">
             </a>
-            <button class="nav-toggle-btn active" data-nav-toggler data-nav-toggle-btn aria-label="Toggle menu">
+
+            <button class="nav-toggle-btn" data-nav-toggler data-nav-toggle-btn aria-label="Toggle menu">
                 <span class="line line-1"></span>
                 <span class="line line-2"></span>
             </button>
-            <nav class="navbar active" data-navbar>
+
+            <nav class="navbar" data-navbar>
                 <ul class="navbar-list">
+
                     <li>
                         <a href="#" class="navbar-link">Home</a>
                     </li>
+
                     <li>
                         <a href="#" class="navbar-link">Resume</a>
                     </li>
+
                     <li>
                         <a href="#" class="navbar-link">Services</a>
                     </li>
+
                     <li>
                         <a href="#" class="navbar-link">Portfolio</a>
                     </li>
+
                     <li>
                         <a href="#" class="navbar-link">Blog</a>
                     </li>
+
                     <li>
                         <a href="#" class="navbar-link">Contact</a>
                     </li>
+
                 </ul>
             </nav>
-            <div class="overlay" data-nav-toggler data-overlay>
 
-            </div>
+            <div class="overlay" data-nav-toggler data-overlay></div>
         </div>
     </header>
+    <main>
+        <article>
 
 
-    <!-- Custom JS script -->
-    <script src="./assets/js/script.js"></script>
-    <!-- Ionicon link -->
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+            <!-- Custom JS script -->
+            <script src="./assets/js/script.js"></script>
+            <!-- Ionicon link -->
+            <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+            <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
