--- a/index.html
+++ b/index.html
@@ -76,6 +76,28 @@
     </header>
     <main>
         <article>
+            <section class="section hero" aria-label="home">
+                <div class="container">
+                    <div class="hero-content">
+                        <h1 class="h1 hero-title">Christy Vas</h1>
+                        <p class="hero-subtitle">
+                            Software Engineer
+                        </p>
+                        <div class="hero-banner">
+                            <img src="./assets/images/hero-banner.jpg" alt="Hero-Banner-Image" width="800" height="800" class="w-100">
+                        </div>
+                        <p class="section-text">
+                            As a full-stack software engineer with a passion for creating positive change, I am committed to using my skills and expertise to build innovative products that make the world a better place.
+                        </p>
+                        <a href="" class="btn has-before">
+                            <span class="span">Download CV</span>
+                            <ion-icon name="download-outline" aria-hidden="true"></ion-icon>
+                        </a>
+                    </div>
+                </div>
+            </section>
+        </article>
+    </main>
 
 
             <!-- Custom JS script -->
