Minor frontend changes

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     - primary meta tags
     -->
     <title>Christy Vas - Full Stack Engineer</title>
-    <meta name="title" content="Kane Williams - Web & App Developer">
-    <meta name="description" content="This is a personal portfolio html template made by codewithsadee">
+    <meta name="title" content="Christy Vas - Full Stack Engineer">
+    <meta name="description" content="Personal Portfolio Website for Christy Vas - Full Stack Software Engineer">
 
     <!-- 
     - favicon
@@ -118,10 +118,10 @@
 
                     <div class="hero-content">
 
-                        <h1 class="h1 hero-title">Kane Williams</h1>
+                        <h1 class="h1 hero-title">Christy Vas</h1>
 
                         <p class="hero-subtitle">
-                            Creative Web & App Developer
+                            Full Stack Developer
                         </p>
 
                         <div class="hero-banner">
@@ -130,13 +130,13 @@
                         </div>
 
                         <p class="section-text">
-                            Hi, I’m kane williams and I am creative web & app developer who dream making the world
-                            better place by
-                            creating captivating products.
+                            Hi, I’m Christy Vas. As a full stack software engineer with a passion for creating positive
+                            change, I am committed to using my skills and expertise to build innovative products that
+                            make the world a better place.
                         </p>
 
                         <a href="#" class="btn has-before">
-                            <span class="span">Download CV</span>
+                            <span class="span">Download Resume</span>
 
                             <ion-icon name="download-outline" aria-hidden="true"></ion-icon>
                         </a>
@@ -690,7 +690,7 @@
                 </li>
 
                 <li>
-                    <a href="mailto:info@kwilliams.com" class="footer-link">info@kwilliams.com</a>
+                    <a href="mailto:info@kwilliams.com" class="footer-link">christyvas23@gmail.com</a>
                 </li>
 
             </ul>
@@ -702,7 +702,7 @@
                 </li>
 
                 <li>
-                    <a href="#" class="footer-link">San Francisco — California</a>
+                    <a href="#" class="footer-link">Farwaniya, Kuwait — Bangaluru, India</a>
                 </li>
 
             </ul>
@@ -710,8 +710,14 @@
             <ul class="social-list">
 
                 <li>
+                    <a href="https://www.linkedin.com/in/chris-vaz/" class="social-link">
+                        <ion-icon name="logo-linkedin"></ion-icon>
+                    </a>
+                </li>
+
+                <li>
                     <a href="#" class="social-link">
-                        <ion-icon name="logo-dribbble"></ion-icon>
+                        <ion-icon name="logo-github"></ion-icon>
                     </a>
                 </li>
 
@@ -723,13 +729,7 @@
 
                 <li>
                     <a href="#" class="social-link">
-                        <ion-icon name="logo-skype"></ion-icon>
-                    </a>
-                </li>
-
-                <li>
-                    <a href="#" class="social-link">
-                        <ion-icon name="logo-linkedin"></ion-icon>
+                        <ion-icon name="logo-dribbble"></ion-icon>
                     </a>
                 </li>
 
