--- a/index.html
+++ b/index.html
@@ -716,19 +716,19 @@
                 </li>
 
                 <li>
-                    <a href="#" class="social-link">
+                    <a href="https://github.com/chris-vaz" class="social-link">
                         <ion-icon name="logo-github"></ion-icon>
                     </a>
                 </li>
 
                 <li>
-                    <a href="#" class="social-link">
+                    <a href="https://www.instagram.com/chris.vaz_/" class="social-link">
                         <ion-icon name="logo-instagram"></ion-icon>
                     </a>
                 </li>
 
                 <li>
-                    <a href="#" class="social-link">
+                    <a href="https://dribbble.com/chrisvaz" class="social-link">
                         <ion-icon name="logo-dribbble"></ion-icon>
                     </a>
                 </li>
