Updated Footer Section

--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
                 </li>
 
                 <li>
-                    <a href="mailto:info@kwilliams.com" class="footer-link">christyvas23@gmail.com</a>
+                    <a href="mailto:christyvas23@gmail.com" class="footer-link">christyvas23@gmail.com</a>
                 </li>
 
             </ul>
