Updated navbar links

--- a/index.html
+++ b/index.html
@@ -75,15 +75,11 @@
                     </li>
 
                     <li>
-                        <a href="#" class="navbar-link">Resume</a>
+                        <a href="#" class="navbar-link">Technical Skills</a>
                     </li>
 
                     <li>
-                        <a href="#" class="navbar-link">Services</a>
-                    </li>
-
-                    <li>
-                        <a href="#" class="navbar-link">Portfolio</a>
+                        <a href="#" class="navbar-link">Projects</a>
                     </li>
 
                     <li>
