Fixed minor bugs

--- a/index.html
+++ b/index.html
@@ -75,15 +75,15 @@
                     </li>
 
                     <li>
-                        <a href="#" class="navbar-link">Technical Skills</a>
+                        <a href="#skills-label" class="navbar-link">Technical Skills</a>
                     </li>
 
                     <li>
-                        <a href="#" class="navbar-link">Projects</a>
+                        <a href="#portfolio-label" class="navbar-link">Projects</a>
                     </li>
 
                     <li>
-                        <a href="#" class="navbar-link">Contact</a>
+                        <a href="#contact-label" class="navbar-link">Contact</a>
                     </li>
 
                 </ul>
@@ -146,13 +146,13 @@
         - #SKILLS Section
         -->
 
-            <section class="service" aria-labelledby="service-label">
+            <section class="service" id="skills-label">
                 <div class="container">
 
                     <div class="title-wrapper">
 
                         <div>
-                            <h2 class="h2 section-title" id="service-label">Technical Skills</h2>
+                            <h2 class="h2 section-title">Technical Skills</h2>
                         </div>
                     </div>
                     <p class="section-subtitle2">Languages: </p>
@@ -177,7 +177,7 @@
                 <div id="title-wrapper2">
 
                     <div>
-                        <h2 class="h2 section-title" id="service-label">Projects</h2>
+                        <h2 class="h2 section-title" id="portfolio-label">Projects</h2>
                     </div>
                 </div>
                     <div class="slider" data-slider>
@@ -269,7 +269,7 @@
                             </div>
                         </li>
 
-                        <li class="slider-item">
+                        <!-- <li class="slider-item">
                             <div class="portfolio-card img-holder" style="--width: 600; --height: 600;">
 
                                 <img src="./assets/images/portfolio-6.jpg" width="600" height="600" loading="lazy"
@@ -284,7 +284,7 @@
                                 <a href="#" class="layer-link"></a>
 
                             </div>
-                        </li>
+                        </li> -->
                         
                     </ul>
 
@@ -320,7 +320,7 @@
     - #FOOTER Section
     -->
 
-    <footer class="footer">
+    <footer class="footer" id="contact-label">
         <div class="container">
 
             <ul class="footer-list">
