Fixed minor bugs

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         </p>
 
                         <div class="hero-banner">
-                            <img src="./assets/images/hero-banner.jpg" width="800" height="800" alt="kane williams"
+                            <img src="./assets/images/hero-banner.jpg" width="800" height="800" alt="Christy Vaz Hero Banner"
                                 class="w-100">
                         </div>
 
