--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
                     <div class="hero-content">
 
-                        <h1 class="h1 hero-title">Christy Vas</h1>
+                        <h1 class="h1 hero-title">Christy<br>Vas</h1>
 
                         <p class="hero-subtitle">
                             Full Stack Developer
