--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                 </li>
 
                 <li>
-                    <a href="https://www.google.com/maps/@29.2671653,47.957742,16z" class="footer-link">Farwaniya, Kuwait — Bengaluru, India</a>
+                    <a href="https://www.google.com/maps/@29.2671653,47.957742,16z" class="footer-link">Farwaniya, Kuwait</a>
                 </li>
 
             </ul>
